plugins {
    id 'com.google.protobuf' version '0.9.6'
}

java {
  sourceCompatibility = 1.8
  targetCompatibility = 1.8
}

def grpcVersion = '1.52.0' // CURRENT_GRPC_VERSION
def protobufVersion = '3.21.12'
def protocVersion = protobufVersion

repositories {
    maven { // The google mirror is less flaky than mavenCentral()
        url "https://maven-central.storage-download.googleapis.com/maven2/" }
    mavenCentral()
    mavenLocal()
}

["extractIncludeProto", "extractIncludeTestProto"].each { t ->
    tasks.named(t).configure {
        dependsOn(":freeplane:createEmojiList")
    }
}

dependencies {
    implementation project(':freeplane')
    implementation project(':freeplane_plugin_script')


    lib "io.grpc:grpc-protobuf:${grpcVersion}"
    lib "io.grpc:grpc-stub:${grpcVersion}"
    lib "io.grpc:grpc-netty-shaded:${grpcVersion}"
    lib "io.grpc:grpc-netty:${grpcVersion}"
    lib "com.google.protobuf:protobuf-java-util:${protobufVersion}"
    lib 'org.json:json:20210307'
    lib 'com.google.code.gson:gson:2.10.1'
    lib 'org.jsoup:jsoup:1.13.1'

    compileOnly "org.apache.tomcat:annotations-api:6.0.53"

    // examples/advanced need this for JsonFormat


    testImplementation "io.grpc:grpc-testing:${grpcVersion}"
    testImplementation "junit:junit:4.12"
    testImplementation "org.mockito:mockito-core:3.4.0"
}

ext.bundleImports = 'org.freeplane.plugin.script.*'

protobuf {
    protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
    plugins {
        grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
    }
    generateProtoTasks {
        all()*.plugins { grpc {} }
    }
}

sourceSets {
    main {
        java {
            srcDirs 'src/main/proto/'
            srcDirs 'src/main/java/'
        }
    }
}
